Bug 507203 - When laptop goes into or out of battery mode while sleeping, power management actions are not triggered or re-evaluated upon wake-up
Summary: When laptop goes into or out of battery mode while sleeping, power management...
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Power management & brightness (other bugs)
Version First Reported In: 6.4.3
Platform: Arch Linux Linux
: HI normal
Target Milestone: 1.0
Assignee: Nate Graham
URL:
Keywords:
: 464310 471636 505027 509288 (view as bug list)
Depends on:
Blocks:
 
Reported: 2025-07-18 16:56 UTC by Mathis Paquet
Modified: 2026-06-12 16:54 UTC (History)
8 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.6.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Mathis Paquet 2025-07-18 16:56:01 UTC
SUMMARY
If you wish to reduce the display brightness on your laptop while running on the battery, it currently does not work if the laptop is sleeping while the charger is unplugged. For example, using the laptop while it is charging, closing the lid and later opening the laptop on battery power will not have reduced the brightness even if it is configured to do so. However, unplugging the laptop while it is awake will correctly trigger the brightness change. This is also true for scripts/commands that should be executed when the power management changes.

STEPS TO REPRODUCE
1. In power management, configure the screen brightness to go down when on battery. Make sure the current brightness is 100% and that the laptop is charging.
2. Close the lid, putting the laptop in sleep mode.
3. Unplug the laptop.
4. Open the laptop and log in.

OBSERVED RESULT
The brightness has not changed to the desired amount.

EXPECTED RESULT
The brightness should change.

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: 6.15.6-arch1-1 (64-bit)
KDE Plasma Version: 6.4.3
KDE Frameworks Version: 6.16.0
Qt Version: 6.9.1

ADDITIONAL INFORMATION
Laptop is a Legion Pro 7 16IRX8H with Nvidia + Intel GPU
Comment 1 Nate Graham 2025-08-06 23:25:57 UTC
Can confirm. We have a bunch of different bug reports about specific manifestations of this issue, but this one is well-worded so I'm going to use it as the master bug report for all the others.
Comment 2 Nate Graham 2025-08-06 23:26:08 UTC
*** Bug 505027 has been marked as a duplicate of this bug. ***
Comment 3 Nate Graham 2025-08-06 23:26:16 UTC
*** Bug 464310 has been marked as a duplicate of this bug. ***
Comment 4 Nate Graham 2025-08-06 23:26:26 UTC
*** Bug 471636 has been marked as a duplicate of this bug. ***
Comment 5 Nate Graham 2025-09-25 22:27:24 UTC
*** Bug 509288 has been marked as a duplicate of this bug. ***
Comment 6 Nate Graham 2025-09-25 22:27:58 UTC
Basically, we're not handling state changes that happen while asleep. We'll need to add some logic to Core::onResumingFromIdle()
Comment 7 Nate Graham 2025-09-25 22:46:13 UTC
Or rather, a new onResumeFromSuspend() function.
Comment 8 Fernando Marcelino Muniz 2025-09-25 22:54:40 UTC
*** Bug 496042 has been marked as a duplicate of this bug. ***
Comment 9 Bug Janitor Service 2025-09-25 23:19:06 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/powerdevil/-/merge_requests/583
Comment 10 Nate Graham 2025-12-22 07:29:37 UTC
Git commit da9119a97fc79b6e6fbf3986b697255ffeb2847e by Nate Graham.
Committed on 22/12/2025 at 07:29.
Pushed by ngraham into branch 'master'.

Re-check AC adapter state after resuming from suspend

If we don't re-check it, the internal state won't match reality when
the user plugged or unplugged it while suspended.
FIXED-IN: 6.5.5

M  +13   -8    daemon/controllers/batterycontroller.cpp
M  +6    -0    daemon/controllers/batterycontroller.h
M  +2    -0    daemon/powerdevilcore.cpp

https://invent.kde.org/plasma/powerdevil/-/commit/da9119a97fc79b6e6fbf3986b697255ffeb2847e
Comment 11 Mathis Paquet 2026-02-19 16:09:11 UTC
As of Plasma 6.6, it seems like this still isn't fixed, at least for me. Can anyone confirm?
Comment 12 Nate Graham 2026-02-19 22:31:28 UTC
It's working as expected for me with your original steps to reproduce. With Plasma 6.6, how are you reproducing the issue? The exact same way?
Comment 13 Mathis Paquet 2026-02-19 22:34:06 UTC
Yes, the exact same way. Neither the brightness nor the power profile are changed. It still only works when the laptop is plugged and unplugged while it's not sleeping.
Comment 14 Nate Graham 2026-02-19 22:36:23 UTC
Oh, I see the problem. The fix is in master but not 6.6, because I forgot to backport it. :/ I'll do that immediately.

Thanks for following up on this!
Comment 15 Nate Graham 2026-02-19 22:37:51 UTC
Hmm, no that's not it; the commit went in months ago so no backport was necessary.
Comment 16 Nate Graham 2026-02-19 22:40:39 UTC
I wonder if your NVIDIA GPU could be relevant here. Is it possible that the NVIDIA driver or userland software is manually setting the brightness, overriding the change that powerdevil made?
Comment 17 Mathis Paquet 2026-02-19 22:47:41 UTC
Honestly, Nvidia is probably the culprit to a lot of my issues, but my laptop's display is running on the Intel GPU. Would it be useful to send the systemd logs of powerdevil in the scenario where it applies the brightness change vs. when it doesn't?
Comment 18 Nate Graham 2026-02-19 23:11:34 UTC
Sure, if you can cut them down to only show the relevant parts of the logs.
Comment 19 Mathis Paquet 2026-02-20 00:02:09 UTC
Alright, so, these are the logs from when I plug and unplug my laptop while it is powered on:

Feb 19 18:53:35 LEGION-Mathis org_kde_powerdevil[1842]: [ 41640] Udev event detected  
Feb 19 18:53:35 LEGION-Mathis systemd[1]: dbus-:1.2-org.kde.powerdevil.wakeupsourcehelper@5.service: Deactivated successfully.  
Feb 19 18:53:37 LEGION-Mathis org_kde_powerdevil[1842]: [ 41640] Adding connected display with bus 9  
Feb 19 18:53:37 LEGION-Mathis org_kde_powerdevil[1842]: [ 41640] Emitting DDCA_Display_Status_Event[30824.043:  DDCA_EVENT_DISPLAY_CONNECTED, card1-eDP-1, dref: DDCA_Display_Ref[22], io_path:/dev/i2c-9, ddc working: false]  
Feb 19 18:53:37 LEGION-Mathis org_kde_powerdevil[1842]: [ 41640] Starting 1 callback threads  
Feb 19 18:53:37 LEGION-Mathis org_kde_powerdevil[1842]: [ 41640] libddcutil callback thread 0x7f5710006290 started  
Feb 19 18:53:37 LEGION-Mathis org_kde_powerdevil[1842]: [ 41640] Started 1 event callback thread(s)  
Feb 19 18:53:37 LEGION-Mathis org_kde_powerdevil[1842]: [ 41640] Udev event detected  
Feb 19 18:53:37 LEGION-Mathis org_kde_powerdevil[1842]: [ 43346] Invoking callback function 0x7f57338237f0 for event DDCA_Display_Status_Event[30824.043:  DDCA_EVENT_DISPLAY_CONNECTED, card1-eDP-1, dref: DDCA_Display_Ref[22], io_path:/dev/i2c-9, ddc w  
orking: false] in this thread [ 43346]  
Feb 19 18:53:37 LEGION-Mathis org_kde_powerdevil[1842]: [ 43346] Callback function 0x7f57338237f0 for event DDCA_Display_Status_Event[30824.043:  DDCA_EVENT_DISPLAY_CONNECTED, card1-eDP-1, dref: DDCA_Display_Ref[22], io_path:/dev/i2c-9, ddc working: f  
alse] complete  
Feb 19 18:53:37 LEGION-Mathis org_kde_powerdevil[1842]: [  1842] Quiescing libddcutil API...  
Feb 19 18:53:37 LEGION-Mathis org_kde_powerdevil[1842]: [  1842] Quiesce libddcutil API complete  
Feb 19 18:53:37 LEGION-Mathis org_kde_powerdevil[1842]: [  1842] Display redetection starting.  
Feb 19 18:53:37 LEGION-Mathis org_kde_powerdevil[1842]: [ 41639] ddc became enabled for Display_Ref[22:bus /dev/i2c-9 @0x7f57100307e0] after 0 milliseconds  
Feb 19 18:53:38 LEGION-Mathis org_kde_powerdevil[1842]: [ 41639] Emitting DDCA_Display_Status_Event[30825.074:  DDCA_EVENT_DDC_ENABLED, card1-eDP-1, dref: DDCA_Display_Ref[22], io_path:/dev/i2c-9, ddc working: false]  
Feb 19 18:53:38 LEGION-Mathis org_kde_powerdevil[1842]: [ 41639] Starting 1 callback threads  
Feb 19 18:53:38 LEGION-Mathis org_kde_powerdevil[1842]: [ 41639] libddcutil callback thread 0x7f5704004450 started  
Feb 19 18:53:38 LEGION-Mathis org_kde_powerdevil[1842]: [ 41639] Started 1 event callback thread(s)  
Feb 19 18:53:38 LEGION-Mathis org_kde_powerdevil[1842]: [ 41639] recheck thread terminating because watch thread terminated  
Feb 19 18:53:38 LEGION-Mathis org_kde_powerdevil[1842]: [  1842] Watch thread terminated.  
Feb 19 18:53:38 LEGION-Mathis org_kde_powerdevil[1842]: [ 43350] Invoking callback function 0x7f57338237f0 for event DDCA_Display_Status_Event[30825.074:  DDCA_EVENT_DDC_ENABLED, card1-eDP-1, dref: DDCA_Display_Ref[22], io_path:/dev/i2c-9, ddc working  
: false] in this thread [ 43350]  
Feb 19 18:53:38 LEGION-Mathis org_kde_powerdevil[1842]: [ 43350] Callback function 0x7f57338237f0 for event DDCA_Display_Status_Event[30825.074:  DDCA_EVENT_DDC_ENABLED, card1-eDP-1, dref: DDCA_Display_Ref[22], io_path:/dev/i2c-9, ddc working: false]  
complete  
Feb 19 18:53:39 LEGION-Mathis org_kde_powerdevil[1842]: [  1842] Watching for display connection changes, resolved watch mode = Watch_Mode_Udev, poll loop interval = 500 millisec  
Feb 19 18:53:39 LEGION-Mathis org_kde_powerdevil[1842]: [  1842]                                          extra_stabilization_millisec: 0,  stabilization_poll_millisec: 100  
Feb 19 18:53:39 LEGION-Mathis org_kde_powerdevil[1842]: [  1842] libddcutil recheck thread 0x5574aa222820 started  
Feb 19 18:53:39 LEGION-Mathis org_kde_powerdevil[1842]: [  1842] libddcutil watch thread 0x5574aa0dee10 started  
Feb 19 18:53:39 LEGION-Mathis org_kde_powerdevil[1842]: [  1842] Display redetection finished.  
Feb 19 18:53:39 LEGION-Mathis org_kde_powerdevil[1842]: [  1842] Unquiescing libddcutil API...  
Feb 19 18:53:39 LEGION-Mathis org_kde_powerdevil[1842]: [ 43352] (dw_recheck_displays_func) Recheck interval: Sleeping for 200 milliseconds  
Feb 19 18:53:47 LEGION-Mathis systemd[1]: Started dbus-:1.2-org.kde.powerdevil.backlighthelper@10.service.  
Feb 19 18:54:02 LEGION-Mathis systemd[1]: Started dbus-:1.2-org.kde.powerdevil.wakeupsourcehelper@6.service.  
Feb 19 18:54:03 LEGION-Mathis org_kde_powerdevil[1842]: [ 43353] Udev event detected  
Feb 19 18:54:03 LEGION-Mathis org_kde_powerdevil[1842]: [ 43353] Device /dev/i2c-0 lacks R/W permissions  
Feb 19 18:54:03 LEGION-Mathis org_kde_powerdevil[1842]: [ 43353] Device /dev/i2c-1 lacks R/W permissions  
Feb 19 18:54:03 LEGION-Mathis org_kde_powerdevil[1842]: [ 43353] Device /dev/i2c-2 lacks R/W permissions  
Feb 19 18:54:03 LEGION-Mathis org_kde_powerdevil[1842]: [ 43353] Device /dev/i2c-3 lacks R/W permissions  
Feb 19 18:54:03 LEGION-Mathis org_kde_powerdevil[1842]: [ 43353] Device /dev/i2c-4 lacks R/W permissions  
Feb 19 18:54:03 LEGION-Mathis org_kde_powerdevil[1842]: [ 43353] Device /dev/i2c-5 lacks R/W permissions  
Feb 19 18:54:03 LEGION-Mathis org_kde_powerdevil[1842]: [ 43353] Device /dev/i2c-6 lacks R/W permissions  
Feb 19 18:54:03 LEGION-Mathis org_kde_powerdevil[1842]: [ 43353] Device /dev/i2c-7 lacks R/W permissions  
Feb 19 18:54:03 LEGION-Mathis org_kde_powerdevil[1842]: [ 43353] Device /dev/i2c-8 lacks R/W permissions  
Feb 19 18:54:03 LEGION-Mathis org_kde_powerdevil[1842]: [ 43353] Device /dev/i2c-9 lacks R/W permissions  
Feb 19 18:54:03 LEGION-Mathis org_kde_powerdevil[1842]: [ 43353] Device /dev/i2c-10 lacks R/W permissions  
Feb 19 18:54:03 LEGION-Mathis org_kde_powerdevil[1842]: [ 43353] Device /dev/i2c-11 lacks R/W permissions  
Feb 19 18:54:03 LEGION-Mathis org_kde_powerdevil[1842]: [ 43353] Device /dev/i2c-12 lacks R/W permissions  
Feb 19 18:54:03 LEGION-Mathis org_kde_powerdevil[1842]: [ 43353] Device /dev/i2c-13 lacks R/W permissions  
Feb 19 18:54:03 LEGION-Mathis org_kde_powerdevil[1842]: [ 43353] Device /dev/i2c-14 lacks R/W permissions  
Feb 19 18:54:03 LEGION-Mathis org_kde_powerdevil[1842]: [ 43353] Device /dev/i2c-15 lacks R/W permissions  
Feb 19 18:54:03 LEGION-Mathis org_kde_powerdevil[1842]: [ 43353] Device /dev/i2c-0 lacks R/W permissions  
Feb 19 18:54:03 LEGION-Mathis org_kde_powerdevil[1842]: [ 43353] Device /dev/i2c-1 lacks R/W permissions  
Feb 19 18:54:03 LEGION-Mathis org_kde_powerdevil[1842]: [ 43353] Device /dev/i2c-2 lacks R/W permissions  
Feb 19 18:54:03 LEGION-Mathis org_kde_powerdevil[1842]: [ 43353] Device /dev/i2c-3 lacks R/W permissions  
Feb 19 18:54:03 LEGION-Mathis org_kde_powerdevil[1842]: [ 43353] Device /dev/i2c-4 lacks R/W permissions  
Feb 19 18:54:03 LEGION-Mathis org_kde_powerdevil[1842]: [ 43353] Device /dev/i2c-5 lacks R/W permissions  
Feb 19 18:54:03 LEGION-Mathis org_kde_powerdevil[1842]: [ 43353] Device /dev/i2c-6 lacks R/W permissions  
Feb 19 18:54:03 LEGION-Mathis org_kde_powerdevil[1842]: [ 43353] Device /dev/i2c-7 lacks R/W permissions  
Feb 19 18:54:03 LEGION-Mathis org_kde_powerdevil[1842]: [ 43353] Device /dev/i2c-8 lacks R/W permissions  
Feb 19 18:54:03 LEGION-Mathis org_kde_powerdevil[1842]: [ 43353] Device /dev/i2c-9 lacks R/W permissions  
Feb 19 18:54:03 LEGION-Mathis org_kde_powerdevil[1842]: [ 43353] Device /dev/i2c-10 lacks R/W permissions  
Feb 19 18:54:03 LEGION-Mathis org_kde_powerdevil[1842]: [ 43353] Device /dev/i2c-11 lacks R/W permissions  
Feb 19 18:54:03 LEGION-Mathis org_kde_powerdevil[1842]: [ 43353] Device /dev/i2c-12 lacks R/W permissions  
Feb 19 18:54:03 LEGION-Mathis org_kde_powerdevil[1842]: [ 43353] Device /dev/i2c-13 lacks R/W permissions  
Feb 19 18:54:03 LEGION-Mathis org_kde_powerdevil[1842]: [ 43353] Device /dev/i2c-14 lacks R/W permissions  
Feb 19 18:54:03 LEGION-Mathis org_kde_powerdevil[1842]: [ 43353] Device /dev/i2c-15 lacks R/W permissions  
Feb 19 18:54:03 LEGION-Mathis org_kde_powerdevil[1842]: [ 43353] Removing connected display on bus 9  
Feb 19 18:54:03 LEGION-Mathis org_kde_powerdevil[1842]: [ 43353] (dw_remove_display_by_businfo) No Display_Ref found for i2c bus: 9  
Feb 19 18:54:03 LEGION-Mathis org_kde_powerdevil[1842]: [ 43353] Udev event detected  
Feb 19 18:54:03 LEGION-Mathis org_kde_powerdevil[1842]: [ 43353] Device /dev/i2c-0 lacks R/W permissions  
Feb 19 18:54:03 LEGION-Mathis org_kde_powerdevil[1842]: [ 43353] Device /dev/i2c-1 lacks R/W permissions  
Feb 19 18:54:03 LEGION-Mathis org_kde_powerdevil[1842]: [ 43353] Device /dev/i2c-2 lacks R/W permissions  
Feb 19 18:54:03 LEGION-Mathis org_kde_powerdevil[1842]: [ 43353] Device /dev/i2c-3 lacks R/W permissions  
Feb 19 18:54:03 LEGION-Mathis org_kde_powerdevil[1842]: [ 43353] Device /dev/i2c-4 lacks R/W permissions  
Feb 19 18:54:03 LEGION-Mathis org_kde_powerdevil[1842]: [ 43353] Device /dev/i2c-5 lacks R/W permissions  
Feb 19 18:54:03 LEGION-Mathis org_kde_powerdevil[1842]: [ 43353] Device /dev/i2c-6 lacks R/W permissions  
Feb 19 18:54:03 LEGION-Mathis org_kde_powerdevil[1842]: [ 43353] Device /dev/i2c-7 lacks R/W permissions  
Feb 19 18:54:03 LEGION-Mathis org_kde_powerdevil[1842]: [ 43353] Device /dev/i2c-8 lacks R/W permissions  
Feb 19 18:54:03 LEGION-Mathis org_kde_powerdevil[1842]: [ 43353] Device /dev/i2c-9 lacks R/W permissions  
Feb 19 18:54:03 LEGION-Mathis org_kde_powerdevil[1842]: [ 43353] Device /dev/i2c-10 lacks R/W permissions  
Feb 19 18:54:03 LEGION-Mathis org_kde_powerdevil[1842]: [ 43353] Device /dev/i2c-11 lacks R/W permissions  
Feb 19 18:54:03 LEGION-Mathis org_kde_powerdevil[1842]: [ 43353] Device /dev/i2c-12 lacks R/W permissions  
Feb 19 18:54:03 LEGION-Mathis org_kde_powerdevil[1842]: [ 43353] Device /dev/i2c-13 lacks R/W permissions  
Feb 19 18:54:03 LEGION-Mathis org_kde_powerdevil[1842]: [ 43353] Device /dev/i2c-14 lacks R/W permissions  
Feb 19 18:54:03 LEGION-Mathis org_kde_powerdevil[1842]: [ 43353] Device /dev/i2c-15 lacks R/W permissions



And this is when I plug it in, close the lid, unplug it, and then open the lid:

Feb 19 18:54:25 LEGION-Mathis org_kde_powerdevil[1842]: [ 43353] Udev event detected  
Feb 19 18:54:25 LEGION-Mathis systemd[1]: dbus-:1.2-org.kde.powerdevil.backlighthelper@10.service: Deactivated successfully.  
Feb 19 18:54:25 LEGION-Mathis systemd[1]: dbus-:1.2-org.kde.powerdevil.wakeupsourcehelper@6.service: Deactivated successfully.  
Feb 19 18:54:26 LEGION-Mathis org_kde_powerdevil[1842]: [ 43353] Adding connected display with bus 9  
Feb 19 18:54:26 LEGION-Mathis org_kde_powerdevil[1842]: [ 43353] Emitting DDCA_Display_Status_Event[30873.480:  DDCA_EVENT_DISPLAY_CONNECTED, card1-eDP-1, dref: DDCA_Display_Ref[24], io_path:/dev/i2c-9, ddc working: false]  
Feb 19 18:54:26 LEGION-Mathis org_kde_powerdevil[1842]: [ 43353] Starting 1 callback threads  
Feb 19 18:54:26 LEGION-Mathis org_kde_powerdevil[1842]: [ 43353] libddcutil callback thread 0x7f5704026260 started  
Feb 19 18:54:26 LEGION-Mathis org_kde_powerdevil[1842]: [ 43353] Started 1 event callback thread(s)  
Feb 19 18:54:26 LEGION-Mathis org_kde_powerdevil[1842]: [ 43353] Udev event detected  
Feb 19 18:54:26 LEGION-Mathis org_kde_powerdevil[1842]: [ 44222] Invoking callback function 0x7f57338237f0 for event DDCA_Display_Status_Event[30873.480:  DDCA_EVENT_DISPLAY_CONNECTED, card1-eDP-1, dref: DDCA_Display_Ref[24], io_path:/dev/i2c-9, ddc w  
orking: false] in this thread [ 44222]  
Feb 19 18:54:26 LEGION-Mathis org_kde_powerdevil[1842]: [ 43352] ddc became enabled for Display_Ref[24:bus /dev/i2c-9 @0x7f57040337f0] after 0 milliseconds  
Feb 19 18:54:26 LEGION-Mathis org_kde_powerdevil[1842]: [ 44222] Callback function 0x7f57338237f0 for event DDCA_Display_Status_Event[30873.480:  DDCA_EVENT_DISPLAY_CONNECTED, card1-eDP-1, dref: DDCA_Display_Ref[24], io_path:/dev/i2c-9, ddc working: f  
alse] complete  
Feb 19 18:54:26 LEGION-Mathis org_kde_powerdevil[1842]: [  1842] Quiescing libddcutil API...  
Feb 19 18:54:26 LEGION-Mathis org_kde_powerdevil[1842]: [  1842] Quiesce libddcutil API complete  
Feb 19 18:54:26 LEGION-Mathis org_kde_powerdevil[1842]: [  1842] Display redetection starting.  
Feb 19 18:54:27 LEGION-Mathis org_kde_powerdevil[1842]: [ 43352] Emitting DDCA_Display_Status_Event[30874.497:  DDCA_EVENT_DDC_ENABLED, card1-eDP-1, dref: DDCA_Display_Ref[24], io_path:/dev/i2c-9, ddc working: false]  
Feb 19 18:54:27 LEGION-Mathis org_kde_powerdevil[1842]: [ 43352] Starting 1 callback threads  
Feb 19 18:54:27 LEGION-Mathis org_kde_powerdevil[1842]: [ 43352] libddcutil callback thread 0x7f571001a300 started  
Feb 19 18:54:27 LEGION-Mathis org_kde_powerdevil[1842]: [ 43352] Started 1 event callback thread(s)  
Feb 19 18:54:27 LEGION-Mathis org_kde_powerdevil[1842]: [ 43352] recheck thread terminating because watch thread terminated  
Feb 19 18:54:27 LEGION-Mathis org_kde_powerdevil[1842]: [  1842] Watch thread terminated.  
Feb 19 18:54:27 LEGION-Mathis org_kde_powerdevil[1842]: [ 44223] Invoking callback function 0x7f57338237f0 for event DDCA_Display_Status_Event[30874.497:  DDCA_EVENT_DDC_ENABLED, card1-eDP-1, dref: DDCA_Display_Ref[24], io_path:/dev/i2c-9, ddc working  
: false] in this thread [ 44223]  
Feb 19 18:54:27 LEGION-Mathis org_kde_powerdevil[1842]: [ 44223] Callback function 0x7f57338237f0 for event DDCA_Display_Status_Event[30874.497:  DDCA_EVENT_DDC_ENABLED, card1-eDP-1, dref: DDCA_Display_Ref[24], io_path:/dev/i2c-9, ddc working: false]  
complete  
Feb 19 18:54:28 LEGION-Mathis org_kde_powerdevil[1842]: [  1842] Watching for display connection changes, resolved watch mode = Watch_Mode_Udev, poll loop interval = 500 millisec  
Feb 19 18:54:28 LEGION-Mathis org_kde_powerdevil[1842]: [  1842]                                          extra_stabilization_millisec: 0,  stabilization_poll_millisec: 100  
Feb 19 18:54:28 LEGION-Mathis org_kde_powerdevil[1842]: [  1842] libddcutil recheck thread 0x5574aa1e3210 started  
Feb 19 18:54:28 LEGION-Mathis org_kde_powerdevil[1842]: [  1842] libddcutil watch thread 0x5574aa1883b0 started  
Feb 19 18:54:28 LEGION-Mathis org_kde_powerdevil[1842]: [  1842] Display redetection finished.  
Feb 19 18:54:28 LEGION-Mathis org_kde_powerdevil[1842]: [  1842] Unquiescing libddcutil API...  
Feb 19 18:54:28 LEGION-Mathis org_kde_powerdevil[1842]: [ 44225] (dw_recheck_displays_func) Recheck interval: Sleeping for 200 milliseconds
Comment 20 Nate Graham 2026-02-20 15:36:06 UTC
Thanks. I see a lot of DDC activity in the logs. Since this is working for me on my hardware, I'm fairly confident the code in Powerdevil is correct, which means it could be a bug in the DDC library somehow.

I hate to do this since it's your bug report originally, but could I ask you to open a new one about the issue we're tracking down now? The problem is this bug report became the original for 5 duplicates and got a code change attached to it, so it's awkward to now repurpose it for a potential upstream issue.

When you create the new one, link it to this one using the "See also" field.

Thanks a lot!
Comment 21 Mathis Paquet 2026-02-20 17:28:11 UTC
No problem, I have opened the bug here: https://bugs.kde.org/show_bug.cgi?id=516407

I described the issue the way I understand it, but feel free to change it of course.
Comment 22 Fernando Marcelino Muniz 2026-05-26 05:00:10 UTC
The brightness doesn't recover after automatically suspending due to reaching 5%, then waking up due to connecting the power cable.
Unplugging then plugging the power cable after logging back into the session causes the brightness to adjust like it should have had.

Operating System: CachyOS Linux 
KDE Plasma Version: 6.6.5
KDE Frameworks Version: 6.26.0
Qt Version: 6.11.1
Kernel Version: 7.0.10-1-cachyos (64-bit)
Graphics Platform: Wayland
Processors: 8 × 11th Gen Intel® Core™ i5-11300H @ 3.10GHz
Memory: 9 GB of RAM (8.1 GB usable)
Graphics Processor 1: Intel® Iris® Xe Graphics
Graphics Processor 2: NVIDIA GeForce GTX 1650
Manufacturer: LENOVO
Product Name: 82MG
System Version: IdeaPad Gaming 3 15IHU6
Comment 23 TraceyC 2026-05-26 15:43:46 UTC
(In reply to Fernando Marcelino Muniz from comment #22)
> The brightness doesn't recover after automatically suspending due to
> reaching 5%, then waking up due to connecting the power cable.
> Unplugging then plugging the power cable after logging back into the session
> causes the brightness to adjust like it should have had.

This sounds like it might be different than the original problem in this report. Can you reproduce the bug using the exact same steps in the first message?
Comment 24 Fernando Marcelino Muniz 2026-05-26 17:58:18 UTC
Should I reopen Bug 496042 ?
Comment 25 Bug Janitor Service 2026-06-10 03:47:51 UTC
🐛🧹 ⚠️ This bug has been in NEEDSINFO status with no change for at least 15 days. Please provide the requested information, then set the bug status to REPORTED. If there is no change for at least 30 days, it will be automatically closed as RESOLVED WORKSFORME.

For more information about our bug triaging procedures, please read https://community.kde.org/Guidelines_and_HOWTOs/Bug_triaging.

Thank you for helping us make KDE software even better for everyone!
Comment 26 TraceyC 2026-06-12 16:54:39 UTC
Bug 496042 was reopened, so I'll re-close this one.