Notify battery controller about AC adapter state changes while suspended

Otherwise the internal state can get out of sync with the actual state
if the user plugs or unplugs their power core while the system is
suspended

BUG: 507203
FIXED-IN: 6.5.0